--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -67,9 +67,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="code-server-frame">
-                                        <iframe src="http://172.16.50.2:8443/" width="100%" height="1000px"></iframe>
-                                    </div>
+                                    <!-- <div class="code-server-frame">
+                                        <iframe src="http://172.16.50.2:8443/" width="100%" height="1000px" border: none; ></iframe>
+                                    </div> -->
                                 </div>
                                 
                             </div>
