--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -127,7 +127,7 @@
                                         </div>
                                     </div>
                                     <div class="code-server-frame col-12 col-md-7 my-4 my-md-0">
-                                        <iframe id="first-iframe" src="http://localhost:8080/?folder=/workspace/code" width="100%" height="1000px" style="border-radius: 10px;"></iframe>
+                                        <iframe id="first-iframe" src="http://157.245.122.246" width="100%" height="1000px" style="border-radius: 10px;"></iframe>
                                         <iframe id="second-iframe" src="http://localhost:7681" width="100%" height="1000px" style="border-radius: 10px;"></iframe>
                                     </div>
                                     
