--- a/layouts/partials/docs/footer/footer-scripts.html
+++ b/layouts/partials/docs/footer/footer-scripts.html
@@ -55,3 +55,5 @@
 {{- else }}
     <script type="text/javascript" src="{{ $js.Permalink }}" defer></script>
 {{- end }}
+
+<script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
