--- a/layouts/partials/docs/sidebar.html
+++ b/layouts/partials/docs/sidebar.html
@@ -91,8 +91,8 @@
                         </li>
                     {{ else }}
                         {{ $active := in $currentPage.RelPermalink .RelPermalink }}
-                        <li >
-                            <a class="sidebar-root-link">
+                        <li class="{{ if $active }}current{{ end }}">
+                            <a class="sidebar-root-link" href="{{ .Permalink }}">
                                 {{ if eq .Site.Params.docs.sidebarIcons true -}}
                                     <i class="material-icons me-2">{{ .Params.icon }}</i>
                                 {{ end }}
