--- a/layouts/partials/docs/top-header.html
+++ b/layouts/partials/docs/top-header.html
@@ -43,10 +43,11 @@
                     </button>
                 {{ end }}
             {{ end -}}
-            
-            <div class="mx-4">
-                {{- partial "docs/toggle-buttons.html" . -}}
+
+            <div class="mx-4 d-flex align-items-center">
+                {{ partial (printf "%s/%s" ($.Scratch.Get "pathName") "open-popup-button") . }}
             </div>
+
         </div>
 
         <div class="d-flex align-items-center">
