--- a/layouts/partials/docs/resizable-iframe.html
+++ b/layouts/partials/docs/resizable-iframe.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <iframe
-    src="http://localhost:8080/?folder=/workspace/code"
+    src="http://137.184.176.234"
     width="100%"
     height="100%"
     frameborder="0"
