--- a/assets/docs/scss/custom/components/_resizable-iframe.scss
+++ b/assets/docs/scss/custom/components/_resizable-iframe.scss
@@ -1,7 +1,7 @@
 .resizable {
-  visibility: hidden;
+  display: none;
   &.active {
-    visibility: visible;
+    display: block;
     position: fixed;
     bottom: 0;
     left: 0;
