--- a/layouts/partials/docs/resizable-iframe.html
+++ b/layouts/partials/docs/resizable-iframe.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <iframe
-    src="https://ttyd-terminal-demo.fly.dev/"
+    src="https://ttyd-terminal-demo.fly.dev"
     width="100%"
     height="100%"
     frameborder="0"
